# Karaoke-de-instrumentos

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: main.py  spleeter_service.py  youtube_downloader.py
backend/src/entity/: combine_stems.py  custom_error.py  file.py  karaoke.py  spleeter.py  youtube_downloader.py  youtube_search.py
backend/src/repository/: combine_stems_repository_pydub.py  file_repository.py  karaoke_repository.py  spleeter_repositry_cli.py  youtube_downloader_repository_pytube.py  youtube_search.py  youtube_search_repository.py
backend/src/usecase/: download_and_split.py  get_karaoke_score.py  get_track_with_removed_stem.py  list_tracks.py  searchVideos.py  search_videos.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/app/: globals.css  globals.scss  layout.tsx
frontend/src/app/(navBar)/: layout.tsx
frontend/src/app/(song)/: layout.tsx
frontend/src/app/[songId]/: instrument-selection.scss  page.tsx
frontend/src/components/: NavBar.js
frontend/src/components/Buttons/: HomeButton.js  OptionsButton.js  PlaylistButton.js  ProfileButton.js
frontend/src/components/NavBar/: NavBar.tsx
frontend/src/components/SongList/: SongCard.js  SongList.js  Songlist.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: PageContext.js  SongContext.tsx
frontend/src/models/: Song.ts
frontend/src/pages/: HomePage.js  PlaylistPage.js  ProfilePage.js  home.css
frontend/src/styles/: NavBar.css
(+22 files in other folders)
